--- a/css/gallery.css
+++ b/css/gallery.css
@@ -233,6 +233,25 @@ html, body {
     background-position: center;
     background-size: cover;
 }
+#card-32{
+    background-image: url(../img/laterEdits/skeeingbs5.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+#card-33{
+    background-image: url(../img/laterEdits/skeeingbs6.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+#card-34{
+    background-image: url(../img/laterEdits/skeeingbs7.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
 
 
 
